[package]
name = "tinyx"
version = "0.1.0"
edition = "2021"

[dependencies]
add system dependencies = "general-systems"
add timedate =  "UTC-syncronization"
add system tools = "graphX, graphineX, TailsNet"
add graphic tools = "HypergraphXland"
add memory packets = "500 GB"
add window manager = "HereticXburst11"
add system loader = "LSDNexus11"
add system kernel = "Nexisparadox24"

[system features]
add server relayer = "RemapperTuneXe43"
add asynchronous network adapter = "NetworkSyncronizer"
add adminstration tools = "ProxygrapheneX4e44"
add grafical interface windows = "ProximityLinkerX4f45" 

[[bin]]
add directory = "lib/src/bin"
add cargo.toml = "build-cargo.toml"
add build.rs = "tinyx-build.rs"
add tinyx-autoinstall.yml = "tinyx-autoinstall.yml"
